Fix pmd issues for processor-cdi